feat: Swagger and docs update, cicd done
